<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">ToDo</string>

    <!--    Bottom Nav Menu-->
    <string name="menu_calendar">Calendar</string>
    <string name="menu_task">Task</string>
    <string name="menu_settings">Settings</string>

    <!--    Calendar Fragment-->
    <string name="default_hello">Good morning,</string>
    <string name="default_name">Nguyen Duy Tuong</string>

    <!--    Item task-->
    <string name="title_default">Title</string>
    <string name="descriptions">No note...</string>
    <string name="tag">Tag</string>
    <string name="priority">Priority</string>

    <!--    Menu click item-->
    <string name="delete_task">Delete</string>
    <string name="mark_completed">Mark as done</string>
    <string name="reschedule">Reschedule</string>

    <!--    AlertDialog-->
    <string name="confirmation_delete">Confirmation</string>
    <string name="sure_delete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_completed">Completed the task!</string>
    <string name="sure_to_mark_as_complete">Are you sure you want to mark this task as completed.</string>

    <!--    Bottom Sheet Add Task-->
    <string name="add_new_task">Input new task here</string>
    <string name="input_the_sub_task">Input the sub-task</string>
    <string name="add_sub_task">Add Sub-Task</string>


    <!--    Dialog schedule-->
    <string name="default_no_dialog_schedule">No</string>
    <string name="reminder_at">Reminder at</string>
    <string name="repeat">Repeat</string>
    <string name="btn_cancel">CANCLE</string>
    <string name="btn_done">DONE</string>
    <string name="no_date">No Date</string>
    <string name="btn_clear">CLEAR</string>
    <string name="reminder_type">Reminder type</string>

    <!--    DateTime Picker-->
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>

    <!--    Menu Notify type-->
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>

    <!--    Menu Priority type-->
    <string name="normal">Normal</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

    <!--    Menu Day Repeat-->
    <string name="_1_day">1 Day</string>
    <string name="_2_days">2 Days</string>
    <string name="_3_days">3 Days</string>
    <string name="_4_days">4 Days</string>
    <string name="_5_days">5 Days</string>
    <string name="_6_days">6 Days</string>
    <string name="other">Other</string>
    <string name="days">Days</string>

    <!--    Menu Week Repeat-->
    <string name="_1_week">1 Week</string>
    <string name="_2_weeks">2 Weeks</string>
    <string name="_3_week">3 Weeks</string>
    <string name="weeks">Weeks</string>

    <!--    Menu Year Repeat-->
    <string name="_1_year">1 Year</string>
    <string name="_2_years">2 Years</string>
    <string name="_3_years">3 Years</string>
    <string name="years">Years</string>

    <!--    Menu Month Repeat-->
    <string name="_1_month">1 Month</string>
    <string name="_2_months">2 Months</string>
    <string name="_3_months">3 Months</string>
    <string name="months">Months</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>

    <string name="error_input_repeat_every">Can\'t choose number greater than 1000</string>
    <string name="error_reminder_type">Reminder time is empty</string>
    <string name="no_tag">No Tag</string>

    <!--    Spinner-->
    <string name="add_new_tag">Add New Tag</string>

    <!--    Add task error-->
    <string name="add_new_task_error">Task Name Empty!!!</string>
    <string name="add_new_tag_error_2">Tag name is exist!!!</string>
    <string name="add_new_tag_error">The tag name must be less than 50 characters!</string>
    <string name="add_new_tag_error_empty">Tag name is empty!</string>
    <string name="add_to_database_error">Add Failure!!!</string>
    <string name="mark_as_unfinished">Mark as unfinished</string>

    <string name="all">All</string>
    <string name="filter_spinner_completed">Completed</string>
    <string name="filter_spinner_incomplete">Incompleted</string>
    <string name="tag_management">Tag management</string>
    <string name="edit">Edit</string>

    <!--    login signup-->
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="empty_email">Email is empty</string>
    <string name="empty_password">Password is empty</string>
    <string name="login_failed">Login Failure!!!</string>
    <string name="btn_send">Send</string>
    <string name="send_email_success">Send success!!! Please check your email</string>
    <string name="send_email_failure">Send failure!!! Please check your email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="empty_name">Name is empty</string>
    <string name="short_password">Password must be at least 6 characters long</string>
    <string name="not_match_password">Password did not match!!!</string>
    <string name="sign_up_success">Signup success!!!</string>
    <string name="sign_up_fail">Signup Failure!!!</string>
    <string name="log_uot">Log out</string>
    <string name="update_fail">Update Failure!!!</string>
    <string name="update_name">Update Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="update_success">Update Succedss</string>
    <string name="error_pass">Wrong password</string>
    <string name="task_detail">Task Detail</string>
    <string name="due_date">Due date</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>

</resources>