<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_background_1"
    android:backgroundTint="@color/primary_color_tint120"
    android:orientation="vertical"
    android:layout_margin="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_background_1"
        android:backgroundTint="@color/primary_color_tint80"
        android:orientation="horizontal"
        android:layout_margin="20dp">
<!--        <CalendarView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"/>-->
        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:layout_width="wrap_content"
            android:id="@+id/mcv_schedule"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_date"
        android:id="@+id/tvNoDate"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:textColor="@color/grey700"
        android:background="@drawable/tag_background_1"/>
    <LinearLayout
        android:id="@+id/llReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add_alarm"
            android:backgroundTint="@color/primary_color_dark10"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/tvReminder"
            android:text="@string/reminder_at"/>
        <TextView
            android:id="@+id/tvShowReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_no_dialog_schedule"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:fontFamily="@font/nunito_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llReminderType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivReminderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add_alert"
            android:backgroundTint="@color/primary_color"/>
        <TextView
            android:id="@+id/tvReminderType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/reminder_type"/>
        <TextView
            android:id="@+id/tvShowReminderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_repeat"
            android:backgroundTint="@color/primary_color_dark10"/>
        <TextView
            android:id="@+id/tvRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/repeat"/>
        <TextView
            android:id="@+id/tvShowRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_no_dialog_schedule"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_regular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_priority"
            android:backgroundTint="@color/primary_color_dark10"/>
        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/priority"/>
        <TextView
            android:id="@+id/tvShowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="Normal"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito_regular"/>
        <ImageView
            android:id="@+id/ivShowPriority"
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:background="@drawable/ic_circle_3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/tvBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/primary_color_tint40"
            android:text="@string/btn_cancel"/>
        <TextView
            android:id="@+id/tvBtnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textColor="@color/primary_color"
            android:text="@string/btn_done"/>
    </LinearLayout>
</LinearLayout>